--- a/ManageItems.html
+++ b/ManageItems.html
@@ -189,9 +189,7 @@
                   </thead>
                   <tbody>
 
-
-
-                  <tr><td>I001</td><td>Mouse</td><td>10</td><td>500</td><td><i class="fa fa-trash"></i></td></tr><tr><td>I002</td><td>Keyboard</td><td>15</td><td>1500</td><td><i class="fa fa-trash"></i></td></tr><tr><td>I003</td><td>Pen Drive</td><td>25</td><td>2500</td><td><i class="fa fa-trash"></i></td></tr><tr><td>I004</td><td>Router</td><td>10</td><td>5000</td><td><i class="fa fa-trash"></i></td></tr><tr><td>I005</td><td>Headset</td><td>10</td><td>1000</td><td><i class="fa fa-trash"></i></td></tr></tbody>
+                  </tbody>
                 </table>
               </div><!-- /.card-body -->
               <div class="card-footer">
