--- a/ManageCustomer.html
+++ b/ManageCustomer.html
@@ -26,6 +26,10 @@
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+  <link href="dist/css/textBorder.css" rel="stylesheet">
+
+  <link href="dist/css/deleteHover.css" rel="stylesheet" >
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -166,8 +170,8 @@
                 <!-- /.card-body -->
 
                 <div class="card-footer">
-                  <button type="submit" class="btn btn-primary" id="btnSubmit">Save</button>
-                  <button type="reset" class="btn btn-warning">Clear</button>
+                  <button type="button" class="btn btn-primary" id="btnSubmit">Save</button>
+                  <button type="button" class="btn btn-warning" id="btn-clear">Clear</button>
                 </div>
               </form>
             </div>
@@ -176,13 +180,13 @@
           <div class="col col-12 col-md-6">
             <div class="card card-primary card-outline">
               <div class="card-body">
-                <table id="tbl-students" class="table table-hover table-bordered">
+                <table id="tbl-customers" class="table table-hover table-bordered">
                   <thead>
                   <tr>
-                    <th class="text-center">ID</th>
-                    <th>Customer Name</th>
-                    <th>Customer Address</th>
-                    <th></th>
+                    <th >ID</th>
+                    <th >Customer Name</th>
+                    <th >Customer Address</th>
+                    <th class="text-center">Delete</th>
                   </tr>
                   </thead>
                   <tbody>
@@ -258,5 +262,9 @@
 <script src="dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
+<!-- load db -->
+<script src="dist/js/db.js"></script>
+<!-- Manage Customer -->
+<script src="dist/js/ManageCustomerController.js"></script>
 </body>
 </html>
