--- a/ManageOrders.html
+++ b/ManageOrders.html
@@ -26,6 +26,10 @@
   <link rel="stylesheet" href="plugins/summernote/summernote-bs4.css">
   <!-- Google Font: Source Sans Pro -->
   <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
+
+  <link href="dist/css/textBorder.css" rel="stylesheet">
+
+  <link href="dist/css/deleteHover.css" rel="stylesheet" >
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
 <div class="wrapper">
@@ -147,10 +151,20 @@
               <!-- form start -->
               <form role="form">
                 <div class="card-body">
+
+                  <div class="form-group">
+                    <label for="txtId">Order Id</label>
+                    <input class="form-control" name="id" id="txtOrderId"  type="name">
+                  </div>
+                  <div class="form-group">
+                    <label for="txtId">Order Date</label>
+                    <input class="form-control" name="id" id="txtOrderDate"  type="name">
+                  </div>
+
                   <div class="form-group">
                     <label for="txtId">Customer ID</label>
                     <select class="form-control custom-select" id="txtId" placeholder="Select Customer ID" onchange="customerLoad()">
-                      <option>C001</option><option>C002</option><option>C003</option><option>C004</option><option>C005</option><option>C006</option><option>C007</option></select>
+                      </select>
                   </div>
                   <div class="form-group">
                     <label for="txtName">Customer Name</label>
@@ -159,7 +173,7 @@
                   <div class="form-group">
                     <label for="txtCode">Item Code</label>
                     <select class="form-control custom-select" id="txtCode" placeholder="Enter Item Code" onchange="itemLoad()">
-                      <option>I001</option><option>I002</option><option>I003</option><option>I004</option><option>I005</option><option>I006</option><option>I007</option><option>I008</option><option>I009</option><option>I010</option><option>I011</option><option>I012</option></select>
+                      </select>
                   </div>
                   <div class="form-group">
                     <label for="txtDescription">Item Description</label>
@@ -181,8 +195,8 @@
                 <!-- /.card-body -->
 
                 <div class="card-footer">
-                  <button type="button" class="btn btn-primary" onclick="addItemsToTable()">Add</button>
-                  <button type="reset" class="btn btn-warning">Clear</button>
+                  <button type="button" class="btn btn-primary" onclick="addItemsToTable()" id="btn-add">Add</button>
+                  <button type="reset" class="btn btn-warning" id="btn-clear">Clear</button>
                 </div>
               </form>
             </div>
@@ -191,15 +205,15 @@
           <div class="col col-12 col-md-6">
             <div class="card card-primary card-outline">
               <div class="card-body">
-                <table id="tbl-placeorder" class="table table-hover table-bordered">
+                <table id="tbl-placeOrder" class="table table-hover table-bordered">
                   <thead>
                   <tr>
-                    <th class="text-center">Code</th>
-                    <th>Description</th>
-                    <th>QTY</th>
-                    <th>Unit Price</th>
+                    <th>Order Id</th>
+                    <th>Order Date</th>
+                    <th>Customer Id</th>
+                    <th>Customer Name</th>
                     <th>Total</th>
-                    <th></th>
+                    <th class="text-center">Delete</th>
                   </tr>
                   </thead>
                   <tbody>
@@ -269,5 +283,9 @@
 <script src="dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
+<!-- load db -->
+<script src="dist/js/db.js"></script>
+<!-- Manage orders -->
+<script src="dist/js/ManageOrderController.js"></script>
 </body>
 </html>
