--- a/SearchOrders.html
+++ b/SearchOrders.html
@@ -171,7 +171,6 @@
                     <th>Customer ID</th>
                     <th>Customer Name</th>
                     <th>Total</th>
-                    <th></th>
                   </tr>
                   </thead>
                   <tbody>
@@ -241,5 +240,9 @@
 <script src="dist/js/pages/dashboard.js"></script>
 <!-- AdminLTE for demo purposes -->
 <script src="dist/js/demo.js"></script>
+<!-- load db -->
+<script src="dist/js/db.js"></script>
+<!-- Manage orders -->
+<script src="dist/js/SearchOrderController.js"></script>
 </body>
 </html>
